css/style.css
#currentProject {
    margin-right: 10px;
}

.chronologicalView
{
    height: 550px;
    border: 1px solid #E7E7E7;
    border-radius: 4px;
}

#tracks
{
    height: 501px;
    width: 100%;
    overflow-y: auto;
}

.trackInfo {
    float: left;
    width: 190px;
}

.trackView {
    float: left;
    width: 610px;
}

.singleTrack
{
    height: 120px;
    border-bottom: 1px solid #dcdcdc;
    display: inline-block;
}

.optionsTrack
{
    float: right;
    width: 45px;
}

.valuesTrack
{
    float: left;
    width: 140px;
    margin-top: 5px;
}

.time
{
    float: left;
    position: relative;
    font-weight: bold;
}

.timeTrack
{
    width: 100%;
    height: 30px;
    padding-left: 20%;
    margin-top: 15px;
    border-bottom: 1px solid #E7E7E7;
}

.timeLeft
{
    float: left;
}

.timeRight
{
    float: right;
}

.textViewEditor
{
    text-align: center;
}

.sizeViewEditorTrack
{
    width: 1000px;
}

.posMinVolume
{
    float: left;
}

.posMaxVolume
{
    float: right;
}

.zoom
{
    margin-left: 20px;
    display: inline-block;
}

.player
{
    width: 200px;
}

#progressPlayerOuter
{
    margin-left: 20px;
    margin-right: 20px;
}

#contentPlayer
{
    width: 100px;
    height: 100px;
    background-color: #000000;
}

.bold
{
    font-weight: bold;
}
.selectedFile
{
   border:  1px solid red;
}
#divListFile
{
    height: 180px;
    overflow-y: auto;
}

.thumbnailImage
{
    margin-left: 5px;
    margin-top: 5px;
    border: 1px solid black;
}

.trackElement
{
    /*width: 2000px;*/
    border: 1px solid blue;
    height: 80%;
    margin-left: 0;
    resize: none;
    overflow: hidden;
    display: inherit;
}

.toolbar {
    position: absolute;
    bottom: 15px;
}

.listFiles
{
    height: 445px;
    margin-top: 15px;
    overflow-x: auto;
    overflow-y: auto;
}

.filesList
{
    height: 550px;
    margin-left: 10px;
    min-width: 204px;
    border: 1px solid #E7E7E7;
    border-radius: 4px;
}

.center
{
    text-align: center;
}

.marginauto
{
    margin: auto;
}

.strong
{
    font-weight: bold;
}

.titleSize
{
    font-size: 20px;
}

.previewFileContent
{
    width: auto;
    height: 100px;
    border: 1px solid #000000;
}

.propertiesDivText
{
    height: 350px;
}

#textElement {
    border: 1px solid #E7E7E7;
    border-radius: 4px;
}

#footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 60px;
    background-color: #F5F5F5;
}
body
{
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    user-select: none;
}

